fixed some api errors
